# docs/swagger.json
@@ -11,7 +11,7 @@
         "license": {},
         "version": "1.0"
     },
-    "host": "127.0.0.1:8000",
+    "host": "127.0.0.1:8080",
     "paths": {
         "/sd/cpu": {
             "get": {
@@ -142,6 +142,38 @@
         },
         "/v1/user": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "List users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "List the users in the database",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"totalCount\":1,\"userList\":[{\"id\":0,\"username\":\"admin\",\"random\":\"user 'admin' get random string 'EnqntiSig'\",\"password\":\"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG\",\"createdAt\":\"2018-05-28 00:25:33\",\"updatedAt\":\"2018-05-28 00:25:33\"}]}}",
@@ -186,6 +218,36 @@
             }
         },
         "/v1/user/{id}": {
+            "get": {
+                "description": "Get an user by username",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get an user by the user id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"username\":\"kong\"}}",
+                        "schema": {
+                            "$ref": "#/definitions/model.UserModel"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Update a user by ID",
                 "consumes": [
@@ -294,23 +356,12 @@
         "model.UserInfo": {
             "type": "object",
             "properties": {
-                "Deleted_at": {
-                    "type": "string"
-                },
-                "Updated_at": {
-                    "type": "string"
-                },
                 "avatar": {
-                    "type": "string"
-                },
-                "created_at": {
+                    "description": "Password   string `json:\"password\"`",
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
-                },
-                "password": {
-                    "type": "string"
                 },
                 "username": {
                     "type": "string"
@@ -320,10 +371,14 @@
         "model.UserModel": {
             "type": "object",
             "required": [
+                "avatar",
                 "password",
                 "username"
             ],
             "properties": {
+                "avatar": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -397,6 +452,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
