# handler/v1/user/list.go
@@ -10,15 +10,14 @@ import (
 )
 
 // @Summary List the users in the database
+// @Security ApiKeyAuth
 // @Description List users
 // @Tags user
 // @Accept  json
 // @Produce  json
-// @Param   username     query    int     true   "Offset"
 // @Param   offset      query    int     true     "Offset"
-// @Param   limit      query    int     true      "Offset"
-
-// @Success 200 {object} user.SwaggerListResponse "{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":0,"username":"admin","random":"user 'admin' get random string 'EnqntiSig'","password":"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG","createdAt":"2018-05-28 00:25:33","updatedAt":"2018-05-28 00:25:33"}]}}"
+// @Param   limit      query    int     true      "Limit"
+// @Success 200 {object} user.ListResponse "{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":0,"username":"admin","random":"user 'admin' get random string 'EnqntiSig'","password":"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG","createdAt":"2018-05-28 00:25:33","updatedAt":"2018-05-28 00:25:33"}]}}"
 // @Router /v1/user [get]
 func List(c *gin.Context) {
 	log.Info("List function called.")
@@ -28,7 +27,7 @@ func List(c *gin.Context) {
 		return
 	}
 
-	infos, count, err := service.ListUser(r.Username, r.Offset, r.Limit)
+	infos, count, err := service.ListUser(r.Offset, r.Limit)
 	if err != nil {
 		SendResponse(c, err, nil)
 		return
