# model/base_model.go
@@ -1,0 +1,24 @@
+package model
+
+import (
+	"sync"
+	"time"
+)
+
+type BaseModel struct {
+	Id        uint64     `gorm:"primary_key;AUTO_INCREMENT;column:id" json:"-"`
+	CreatedAt time.Time  `gorm:"column:created_at" json:"-"`
+	UpdatedAt time.Time  `gorm:"column:updated_at" json:"-"`
+	DeletedAt *time.Time `gorm:"column:deleted_at" sql:"index" json:"-"`
+}
+
+
+type UserList struct {
+	Lock  *sync.Mutex
+	IdMap map[uint64]*UserInfo
+}
+
+// Token represents a JSON web token.
+type Token struct {
+	Token string `json:"token"`
+}
