# router/router.go
@@ -1,13 +1,14 @@
 package router
 
 import (
+	"ant-forum/router/middleware"
+	"ant-forum/handler/sd"
+	"ant-forum/handler/v1/user"
+
 	_ "ant-forum/docs" // docs is generated by Swag CLI, you have to import it.
 
 	"net/http"
 
-	"ant-forum/handler/v1/user"
-	"ant-forum/handler/sd"
-	"ant-forum/router/middleware"
 	"github.com/gin-gonic/gin"
 	"github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
@@ -32,13 +33,14 @@ func Load(g *gin.Engine, mw ...gin.HandlerFunc) *gin.Engine {
 
 	// The user handlers, requiring authentication
 	u := g.Group("/v1/user")
-	u.Use(middleware.AuthMiddleware())
+	//u.Use(middleware.AuthMiddleware())
 	{
 		u.POST("", user.Create)
 		u.DELETE("/:id", user.Delete)
 		u.PUT("/:id", user.Update)
 		u.GET("", user.List)
-		u.GET("/:username", user.Get)
+		//u.GET("/:username", user.GetUserByName)
+		u.GET("/:id", user.GetUserById)
 	}
 
 	// The health check handlers
